style.css
/* declaring variable */

:root {
  --green: #596d48;
  --gray: #e5e7eb;
  --shadow-color: #d4d3d3;
  --header-width: 38%;
  --form-height: 35 %;
  box-sizing: border-box;
}

/* import fonts */

@font-face {
  font-family: "Norse";
  src: url(./public/norse-bold-webfont.woff) format("woff");
}

p {
  margin: 0;
}

body {
  background-color: #f8f8f8;
}

.container {
  display: flex;
  width: 100%;
  min-height: 100vh;
}

.header-wrapper {
  width: var(--header-width);
  position: relative;
}

.header-wrapper > img {
  width: 100%;
  height: 100%;
}

.header-title {
  background-color: rgba(26, 25, 25, 0.637);
  position: absolute;
  top: 150px;
  width: 100%;
  height: 130px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.logo-img {
  width: auto;
  height: 110px;
}

.header-title > h1 {
  font-family: "Norse";
  color: white;
  font-size: 5rem;
}

.header-wrapper > p,
.header-wrapper > p > a {
  color: white;
  font-size: 0.8rem;
  padding-bottom: 10px;
}

.header-wrapper > p {
  position: absolute;
  bottom: 0px;
  width: 100%;
  text-align: center;
}

.header-wrapper > p > a {
  text-decoration: underline;
}

.main-wrapper {
  width: calc(100% - var(--header-width));
}

.main-upper {
  padding: 100px 8% 48px 8%;
  font-weight: 600;
  font-size: 1.2rem;
}

.main-upper p:nth-of-type(3) {
  padding-top: 20px;
}

.main-center {
  padding: 20px 0 20px 8%;
  background-color: white;
  display: flex;
  flex-wrap: wrap;
  box-shadow: 0px 4px 8px var(--shadow-color);
}

.main-center > p {
  width: 100%;
  font-weight: 600;
  font-size: 1.2rem;
  margin-bottom: 10px;
}

.form-item {
  width: 270px;
  margin: 10px 0;
}

label {
  display: block;
  font-size: 0.8rem;
  text-transform: uppercase;
  color: #4b4b4b;
  margin-bottom: 5px;
}

input {
  border: var(--gray) 1px solid;
  border-radius: 0.2rem;
}

input:focus {
  border: 1px solid blue;
  box-shadow: 3px 3px 3px var(--shadow-color);
}

form > button {
  margin: 40px 0 20px 8%;
  padding: 18px 48px;
  background-color: var(--green);
  border: none;
  border-radius: 0.4rem;
  box-shadow: 3px 3px 10px var(--shadow-color);
  color: white;
  font-weight: 900;
  cursor: pointer;
}

form > button:active {
  background-color: #465538;
}

.main-lower {
  padding: 0 8%;
}

.main-lower a {
  text-decoration: none;
  color: var(--green);
}

